--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,6 +8,13 @@ DOCKER_REQ_PACKAGES:
   - lsb-release
   - python3-docker
 
-DOCKER_KEYRING: /usr/share/keyrings/docker-archive-keyring.gpg
+DOCKER_KEYRING: /etc/apt/keyrings/docker.asc
 
-DOCKER_COMPOSER_VERSION: v2.5.1
+#DOCKER_COMPOSER_VERSION: v2.5.1
+
+DOCKER_PACKAGES:
+  - docker-ce
+  - docker-ce-cli
+  - containerd.io
+  - docker-buildx-plugin
+  - docker-compose-plugin
