--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -1,7 +1,11 @@
 ---
+# Purpose: bring the instance to the desired state by running the role under test.
+# Molecule calls this playbook with `molecule converge`.
 - name: Converge
   hosts: all
+  gather_facts: true # Disable if your role does not rely on facts
+  become: true
   tasks:
-    - name: "Include docker"
-      include_role:
-        name: "docker"
+    - name: Apply role under test
+      ansible.builtin.include_role:
+        name: balazspetik.ansible_docker
